20 Sep 2011: Wouter
	- fix configure --with-gui, it did not change the gui but hooks.

19 Sep 2011: Wouter
	- fix so that if it cannot bind socket the server fails to start.
	- fix so that on OSX no zombie process remains.
	- kill -HUP performs a reload on UNIX. It only reload the strings
	  and that config, it keeps the running probe results and open
	  sockets to panels and certificates.
	- include pangorc, pango.modules, loaders.cache (for gdk) and
	  the pango-basic-win32.dll and gdk png loader dll (if present)
	  in the windows installer.
	- panel.exe uses the windows gui subsystem.  Include more pixloaders.
	- added fedora spec and init script.

16 Sep 2011: Wouter
	- fix OSX get of DHCP options to use ipconfig API instead of faulty
	  awk parse.

15 Sep 2011: Wouter
	- fix makefile dependencies for sed-ed output.
	- tag 0.3. (0.2 was distributed with different contents).
	- trunk has 0.4

14 Sep 2011: Wouter
	- icons in higher bitdepth, install and uninstall icons.
	- stoppanels control command for installers to update that panel exe.
	- tag 0.2
	- trunk has 0.3

13 Sep 2011: Wouter
	- pick up SSID (for windows, OSX) to filter trigger with, so an SSID
	  change from the wlan triggers a reprobe.
	- set windres resource files, icons, log-format, useradmpermission
	  and setup.exe script with NSIS, it includes dlls.

12 Sep 2011: Wouter
	- fix fd leaked every second by panel if the daemon was down.
	- more robust outq_delete function in code notation.
	- do not print ID values if mismatch (enabled on verbosity 4).
	- print time of probe with results.
	- fix double-close of FD in acceptfailure case.
	- close log file when daemon exits.

9 Sep 2011: Wouter
	- can override nameserver settings on windows (needs administrator
	  permissions) and clears them away (back to the default) on exit.
	- fix not enough detection of network changes on OSX.
	- get a probe after start on OSX.
	- fix submit of disconnect state, submit "".